--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -1,7 +1,5 @@
 .top-bar {
   background-color: white;
-  padding-right: 6em;
-  padding-left: 6em;
   padding-top: 1.5em;
   align-items: bottom;
   vertical-align: bottom;
@@ -35,7 +33,7 @@
 #pylon-text {
     font-family: $headline-font;
     font-weight: bold;
-    font-size: 22px;
+    font-size: $lead-font-size;
     color: $text-color;
     vertical-align: bottom;
     background-color: white;
